[FEAT]: Tela Cadastro

--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/package.json
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "css:build": "tailwindcss -i ./wwwroot/css/app.css -o ./wwwroot/css/tailwind.css --minify",
+        "build:css": "tailwindcss -i ./wwwroot/css/app.css -o ./wwwroot/css/tailwind.css --minify",
         "watch": "tailwindcss -i ./wwwroot/css/app.css -o ./wwwroot/css/tailwind.css --watch"
     },
     "keywords": [],
